@@ -1,7 +1,6 @@
 package julietgroupproject;
 
 
-import java.util.ArrayDeque;
 import java.util.ArrayList;
 
 /*
@@ -14,26 +13,26 @@ import java.util.ArrayList;
  *
  * @author George
  */
-public class ProsserLogger {
+public class JulietLogger<T> {
     
-    public static final int DEFAULT_LIMIT = 15;
+    public static final int DEFAULT_LIMIT = 1000;
     private int limit;
-    private ArrayDeque<String> entries = new ArrayDeque<>();
+    private ArrayList<T> entries;
     
-    public ProsserLogger(int limit) {
+    public JulietLogger(int limit) {
         this.limit = limit;
-        entries = new ArrayDeque<>();
+        entries = new ArrayList<>(DEFAULT_LIMIT);
     }
 
-    public ProsserLogger() {
+    public JulietLogger() {
         this(DEFAULT_LIMIT);
     }
     
-    public synchronized void push(String entry) {
-        entries.push(entry);
+    public synchronized void push(T entry) {
+        entries.add(entry);
         
         while (entries.size() > limit) {
-            entries.removeLast();
+            entries.remove(0);
         }
     }
     
@@ -49,7 +48,15 @@ public class ProsserLogger {
         this.limit = limit;
     }
     
-    public synchronized ArrayList<String> getEntries() {
+    public synchronized ArrayList<T> getEntries() {
         return new ArrayList(entries);
+    }
+    
+    public synchronized ArrayList<T> getLastEntries(int n) {
+        return new ArrayList<>(entries.subList(Math.max(0, entries.size()-n), entries.size()));
+    }
+    
+    public void clear() {
+        entries.clear();
     }
 }
